@@ -208,6 +208,24 @@ argument_list|,
 literal|"v2_ss"
 argument_list|,
 literal|"output"
+argument_list|,
+literal|"shouldbeunstored"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"3"
+argument_list|,
+literal|"shouldbeunstored"
+argument_list|,
+literal|"foo"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -678,6 +696,40 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// test SOLR-2970 not returning non-stored fields by default
+name|assertEquals
+argument_list|(
+literal|"id,foo_b,foo_d,foo_s,foo_f,foo_i,foo_dt,foo_l,v_ss,v2_ss\n"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:3"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"csv"
+argument_list|,
+literal|"csv.header"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"0"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// now test SolrDocumentList
 name|SolrDocument
 name|d
@@ -842,6 +894,15 @@ argument_list|(
 literal|"score"
 argument_list|,
 literal|"89.83"
+argument_list|)
+expr_stmt|;
+name|d
+operator|.
+name|addField
+argument_list|(
+literal|"shouldbeunstored"
+argument_list|,
+literal|"foo"
 argument_list|)
 expr_stmt|;
 name|SolrDocumentList
